# CheshireLane9

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/game/ShareCfg/: ship_skin_template.json
assets/game/sharecfgdata/: chapter_template.json  ship_data_statistics.json  ship_data_template.json
crates/cheshire-server/: Cargo.toml
crates/cheshire-server-app/: Cargo.toml  build.rs
crates/cheshire-server-app/src/: config_editor.rs  log_sink.rs  main.rs  server_controller.rs
crates/cheshire-server-app/ui/: app-window.slint
crates/cheshire-server-core/: Cargo.toml
crates/cheshire-server-core/src/: config.default.toml  config.rs  crypto.rs  database.rs  lib.rs  packet.rs
crates/cheshire-server-core/src/data/: mod.rs
crates/cheshire-server-core/src/game/: mod.rs  player_info.rs
crates/cheshire-server-proto/: Cargo.toml  build.rs
crates/cheshire-server-proto/proto/: p11_pb.proto  p16_pb.proto  p17_pb.proto  p21_pb.proto  p23_pb.proto  p24_pb.proto  p25_pb.proto  p29_pb.proto  p30_pb.proto  p34_pb.proto  p63_pb.proto  p64_pb.proto  p70_pb.proto
crates/cheshire-server-proto/src/: p21.rs
crates/cheshire-server-runtime/: Cargo.toml
crates/cheshire-server-runtime/src/: lib.rs
crates/cheshire-server-services/: Cargo.toml
crates/cheshire-server-services/src/: certificates.rs  client-code.json  dispatch.rs  gate.rs  lib.rs  sdk.rs  sdk_proxy.rs
crates/cheshire-server/src/: main.rs
crates/proto/: Cargo.toml
crates/proto/proto/: common_pb.proto  guild_pb.proto  p10_pb.proto  p12_pb.proto  p13_pb.proto  p14_pb.proto  p15_pb.proto  p18_pb.proto  p19_pb.proto  p20_pb.proto  p22_pb.proto  p26_pb.proto  p27_pb.proto  p28_pb.proto  p33_pb.proto  p40_pb.proto  p50_pb.proto  p60_pb.proto  p61_pb.proto  p62_pb.proto
crates/proto/proto_derive/src/: lib.rs
crates/proto/src/: lib.rs  p23.rs
scripts/redirect/: redirect_game.sh  redirect_sdk.py  unredirect_game.sh
src/: certificates.rs  config.default.toml  config.rs  crypto.rs  database.rs  dispatch.rs  gate.rs  main.rs  packet.rs  sdk.rs  sdk_proxy.rs  time.rs
src/data/: mod.rs
src/data/schemas/: chapter_template.rs  mod.rs  ship_data_statistics.rs  ship_data_template.rs  ship_skin_template.rs
src/game/: mod.rs  player_info.rs
