[workspace]
members = [
  "crates/cheshire-server",
  "crates/cheshire-server-app",
  "crates/cheshire-server-core",
  "crates/cheshire-server-runtime",
  "crates/cheshire-server-services",
  "crates/cheshire-server-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
axum = "0.8.1"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
byteorder = "1.5.0"
cheshire-server-core = { path = "crates/cheshire-server-core" }
cheshire-server-runtime = { path = "crates/cheshire-server-runtime" }
cheshire-server-services = { path = "crates/cheshire-server-services" }
hudsucker = { version = "0.24.1", default-features = false, features = ["http2", "rcgen-ca", "rustls-client"] }
md5 = "0.7.0"
prost = "0.13.3"
prost-types = "0.13.3"
prost-build = "0.13.3"
cheshire-server-proto = { path = "crates/cheshire-server-proto" }
rand = "0.8.5"
rustls = { version = "0.23.20", default-features = false, features = ["ring"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slint = { version = "1.17.1", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-femtovg", "std"] }
slint-build = "1.17.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.7"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
